<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_height="165dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/user_card_image"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:background="@color/image_bg_color"
                    android:padding="2dp"
                    android:src="@drawable/person_24"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:strokeColor="@color/light_blue"
                    app:strokeWidth="1dp" />

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/light_blue"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/phoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="40dp"
                            android:textSize="18sp"
                            android:text="@string/phone_number"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/short_bio"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/dummy_text"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-light"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/skills_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill"
                    android:textSize="19sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>